Creo que hay varios puntos listos jeje

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
+    "@ionic/storage": "^4.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "cordova-sqlite-storage": "^6.1.0",
     "ionicons": "^7.0.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
