--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@capacitor-community/sqlite": "^6.0.2",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
+    "@capacitor/camera": "^6.1.0",
     "@capacitor/core": "6.1.2",
     "@capacitor/google-maps": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
